standard/fastapi_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: standard
spec:
  type: NodePort
  selector:
    app: fastapi
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
