standard/phpmyadmin_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
  namespace: standard
spec:
  type: NodePort
  selector:
    app: phpmyadmin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
