standard/postgres_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: standard
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
