standard/fastapi_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: standard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - fastapi.shubha-datascientest.cloudns.biz
      secretName: letsencrypt-prod-api
  rules:
    - host: fastapi.shubha-datascientest.cloudns.biz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-service
                port:
                  number: 5000
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: fastapi-service
                port:
                  number: 5000
          - path: /users/count
            pathType: Prefix
            backend:
              service:
                name: fastapi-service
                port:
                  number: 5000
